<resources>
    <string name="app_name">Gestogram</string>
    <string name="fum">LMP</string>
    <string name="p_eco">First US</string>
    <string name="semanas">Weeks</string>
    <string name="calcular_para_fecha">Calculate for date:</string>
    <string name="S38">Week 38</string>
    <string name="S39">Week 39</string>
    <string name="S40">Week 40</string>
    <string name="S41">Week 41</string>
    <string name="S42">Week 42</string>
    <string name="Cumple">Turns </string>
    <string name="FUM_Corregida">Corrected LMP: </string>
    <string name="Edad_actual">Gestational age: </string>
    <string name="CumpleSemanas">weeks: </string>
    <string name="Hints">"Comments, greetings, suggestions, collaborations!"</string>
    <string name="Enviar">Send email</string>
    <string name="Salir">Close</string>
    <string name="about">About...</string>
    <string name="titulo">Gestogram and gestational calculator</string>
    <string name="meses">months and</string>
    <string name="dias">days</string>
    <string name="mes">month and</string>
    <string name="dia">day</string>
    <string name="semcorto">weeks</string>
    <string name="titulocalifica">Rate the app!</string>
    <string name="subtitulocalifica">We hope your 5 stars</string>
    <string name="calificar">Rate now</string>
    <string name="mastarde">Remember me later</string>
    <string name="nunca">Do not rate</string>
    <string name="FUMtxt">Calculate the time of pregnancy according to the Date of Last Menstruation (DUM)</string>
    <string name="PRIMERAECOtxt">The first field (First US) is for calculating gestational age based on the date the first ultrasound was performed in this pregnancy, and the second field (weeks) is for the weeks reported in the report for that ultrasound.</string>
    <string name="SEMANAStxt">The first field (First echo) is for calculating gestational age based on the date the first ultrasound was performed in this pregnancy, and the second field (weeks) is for the weeks reported in the report for that ultrasound.</string>
    <string name="CALCULARPARAtxt">The date for which gestational age is calculated. By default it is the current date, but it can be modified to know how many weeks are fulfilled on a specific date.</string>
    <string name="FUMCORREGIDAtxt">Corrected LMP refers to the date of the last menstruation adapted to the ultrasound report. It is an estimate calculation to unify dates.</string>
    <string name="EDADGESTACIONALtxt">Displays the gestational age for the date set, by default, for the current date.</string>
    <string name="EDADMESEStxt">Gestational age in months</string>
    <string name="S38txt">38th week date</string>
    <string name="S39txt">39th week date</string>
    <string name="S40txt">40th week date</string>
    <string name="S41txt">41th week date</string>
    <string name="S42txt">42th week date</string>
    <string name="CUMPLE">Shows the date the weeks entered in the field are fulfilled</string>
    <string name="ayuda">Help</string>
    <string name="ayuda1">Show tips</string>
    <string name="opcionayuda">Show help when clicking on text boxes</string>
    <string name="Guardar">Save</string>
    <string name="Novedades_Titulo">Save data</string>
    <string name="Novedades_Texto">xxx</string>
    <string name="otras">other app\'s of the author</string>
    <string name="dextograma_titulo">DEXTOGRAMA</string>
    <string name="dextograma_descripcion">Gestogram and gestational calculator</string>
    <string name="otras_titulo">other related applications</string>
    <string name="nomenclador_titulo">Nomenclator CMQ - CIMAP</string>
    <string name="nomenclador_descripcion">Surgical nomenclature for CMQP specialities (Only Paraguay)</string>
    <string name="ovudex_titulo">OVUDEX</string>
    <string name="ovudex_descripcion">analysis of the regularity of the menstrual cycle and menstruation calculator</string>
    <string name="positivoaplicacion">go to Google Play</string>
    <string name="negativoaplicacion">Do not remember</string>
    <string name="neutroaplicacion">remember later</string>



</resources>
