<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginTop="50dp"
    tools:context=".Otras_app"
    tools:ignore="ExtraText">

    <TextView
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:text="@string/otras_titulo"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center_horizontal" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

    <ImageButton
        android:id="@+id/boton_dextograma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/dextograma" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">

    <TextView
        android:id="@+id/titulo_dextograma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/dextograma_titulo"
        android:layout_marginLeft="10dp" />

    <TextView
        android:id="@+id/descripcion_dextograma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dextograma_descripcion"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/boton_nomenclador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/nomenclador" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titulo_nomenclador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/nomenclador_titulo" />

            <TextView
                android:id="@+id/descripcion_nomenclador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/nomenclador_descripcion" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        >

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <ImageButton
            android:id="@+id/boton_ovudex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/ovudex"
            />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/titulo_ovudex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/ovudex_titulo"
                android:layout_marginLeft="10dp" />

            <TextView
                android:id="@+id/descripcion_ovudex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ovudex_descripcion"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">
    <Button
        android:id="@+id/cerrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="cerrar"
        />
    </androidx.appcompat.widget.LinearLayoutCompat>
</LinearLayout>