<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayoutCompat5"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.drdextersoft.app.gestograma.MainActivity"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:layout_marginTop="20dp"
    android:id="@+id/pantalla"
    >

<androidx.appcompat.widget.LinearLayoutCompat
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:orientation="horizontal"
android:layout_marginTop="10dp"
android:layout_marginLeft="10dp">

<androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        >

    <TextView
            android:id="@+id/FUMtxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        android:layout_marginTop="-5dp"
        android:text="@string/fum"
            />

    <TextView
        android:id="@+id/PRIMERAECOtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/p_eco" />

</androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/RB1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_marginTop="-5dp"
            android:onClick="radiobuttonClick"
             />

        <RadioButton
            android:id="@+id/RB2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="radiobuttonClick"
            />
        </RadioGroup>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
>

        <EditText
            android:id="@+id/FUM"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:focusable="false"
            android:clickable="true"
            android:gravity="center"
            android:background="@drawable/edittextstyle"
            />

        <EditText
            android:id="@+id/P_Eco"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:background="@drawable/edittextstyle"
            android:inputType="date"
            android:focusable="false"
            android:clickable="true"
            android:gravity="center"
            android:layout_marginTop="10dp"

            ></EditText>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <Button
            android:id="@+id/Reset"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:background="@drawable/edittextstyle"
            android:ems="10"
            android:text="Reset"
            android:gravity="center"

            >
        </Button>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            >
        <EditText
            android:id="@+id/Semanas"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:background="@drawable/edittextstyle"
            android:gravity="center"
            android:enabled="false"
            >
        </EditText>
        <TextView
            android:id="@+id/SEMANAStxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/semanas"
            tools:layout_editor_absoluteX="369dp"
            tools:layout_editor_absoluteY="185dp"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            />

        </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>



</androidx.appcompat.widget.LinearLayoutCompat>
    <CheckBox
        android:id="@+id/Guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="Guardar datos"
        >

    </CheckBox>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp">

        <TextView
            android:id="@+id/CALCULARPARAFECHAtxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calcular_para_fecha"></TextView>

        <EditText
            android:id="@+id/ParaFecha"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:layout_marginLeft="10dp"
            android:focusable="false"
            android:clickable="true"
            android:gravity="center"
            android:background="@drawable/edittextstyle"
            ></EditText>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp">

        <TextView
            android:id="@+id/FUM_Corregida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:text=""></TextView>

        <TextView
            android:id="@+id/Edad_Actual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:text="@string/Edad_actual"></TextView>

        <TextView
            android:id="@+id/Meses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:textAlignment="textEnd"
            android:text=""
            android:gravity="end"></TextView>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp">

        <TextView
            android:id="@+id/S38L"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/S38"></TextView>

        <EditText
            android:id="@+id/S38"
            android:layout_width="136dp"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:inputType="date"
            android:background="@drawable/edittextstyle"
            android:gravity="center"
            ></EditText>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp">

        <TextView
            android:id="@+id/S39L"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/S39"></TextView>

        <EditText
            android:id="@+id/S39"
            android:layout_width="136dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/edittextstyle"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:inputType="date"
            android:gravity="center"
            ></EditText>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp">


        <TextView
            android:id="@+id/S40L"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/S40"></TextView>

        <EditText
            android:id="@+id/S40"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/edittextstyle"
            android:focusable="false"
            android:ems="10"
            android:inputType="date"
            android:gravity="center"
            ></EditText>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp">

        <TextView
            android:id="@+id/S41L"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/S41"></TextView>

        <EditText
            android:id="@+id/S41"
            android:layout_width="136dp"
            android:background="@drawable/edittextstyle"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:ems="10"
            android:focusable="false"
            android:inputType="date"
            android:gravity="center"
            ></EditText>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp">

        <TextView
            android:id="@+id/S42L"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/S42"></TextView>

        <EditText
            android:id="@+id/S42"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:background="@drawable/edittextstyle"
            android:focusable="false"
            android:layout_marginLeft="10dp"
            android:inputType="date"
            android:gravity="center"
            ></EditText>


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp">

        <TextView
            android:id="@+id/Cumple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cumple"/>

        <EditText
            android:id="@+id/CalculoSemanas"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:background="@drawable/edittextstyle"
            android:inputType="number"
            android:gravity="center"
            android:layout_marginLeft="5dp"
            ></EditText>

        <TextView
            android:id="@+id/preCumpleSemanas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="@string/CumpleSemanas"
            android:layout_marginLeft="10dp"
            />

        <TextView
            android:id="@+id/CumpleSemanas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="24dp"
            android:text=""
            android:layout_marginLeft="10dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp">

        <TextView
            android:id="@+id/TextoExtra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:visibility="invisible"
        ></TextView>

    </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>